<resources>
    <!--Application-->
    <string name="app_name">Dressing</string>
    <string name="accueil">Accueil</string>
    <string name="tenue">Tenue</string>
    <string name="corbeille">Corbeille à linge</string>
    <string name="notice">Notice d\'utilisation</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="delete">Supprimer</string>
    <!-- Drawer -->
    <string name="strOpenDrawer">Open Drawer</string>
    <string name="strCloseDrawer">Close Drawer</string>
    <!-- Boutons-->
    <string name="validation">Valider</string>
    <!-- Test -->
    <string name="btnClick">Click me !</string>
    <!-- Connexion -->
    <string name="hintId">Identifiant</string>
    <string name="hintPswd">Mot de passe</string>
    <string name="btnConnect">Connexion</string>
    <string name="btnCreateAccount">Créer un compte</string>
    <!-- Creation compte -->
    <string name="createAccount">Création de compte</string>
    <string name="userName">Prénom</string>
    <string name="userSurname">Nom</string>
    <string name="userAge">Age</string>
    <string name="userHeight">Taille (cm)</string>
    <string name="userHairColor">Couleur de cheveux</string>
    <string name="userPreferedColor">Couleur préférée</string>
    <string name="userMorphology">Morphologie</string>
    <string name="confirmPswd">Confirmer le mot de passe</string>
    <!-- Conseils -->
    <string name="conseil_Huit_0">Préférez les hauts larges</string>
    <string name="conseil_Huit_1">Préférez les pantalons coupe droite</string>
    <string name="conseil_V_0">Privilégiez les robes ressérées à la taille</string>
    <string name="conseil_V_1">Évitez de porter des hauts bustier</string>
    <string name="conseil_V_2">Évitez de porter des épaulettes</string>
    <string name="conseil_A_0">Préférez les pantalons coupe droite</string>
    <string name="conseil_A_1">Portez des colliers ras du cou pour attirer l\'attention sur votre buste</string>
    <string name="conseil_A_2">Portez des robes fendues pour amincir vos jambes</string>
    <string name="conseil_A_3">Trichez avec des compensées afin d\'affiner vos jambes</string>
    <string name="conseil_A_4">Portez des hauts amples pour attirer le regard sur votre buste</string>
    <string name="conseil_O_0">Préférez les hauts amples</string>
    <string name="conseil_O_1">Évitez de porter des rayures horizontales</string>
    <string name="conseil_O_2">Évitez de porter des pantalons taille basse</string>
    <string name="conseil_H_0">Portez des robes droites afin d\'embellir votre silhouette</string>
    <string name="conseil_H_1">Évitez les pièces taille haute qui soulignent  les parties moins avantageuse de votre allure</string>
    <string name="conseil_X_0">Évitez les pulls cols roulés moulants</string>
    <string name="conseil_X_1">Osez la couleurs et les decolletés !</string>
    <string name="conseil_X_2">N\'hésitez pas à souligner votre taille avec une ceinture</string>
    <!-- Notice d'utilisation -->
    <string name="notice_text"><![CDATA[ "<h2> Notice d'utilisation </h2>
    <b> Accueil </b>
    <br>
    <br>
    Sur la page d'accueil, vous trouverez les informations vous concernant ainsi
    que des conseils en fonction de votre morphologie.

    <br><br>

<b>Afficher son dressing : </b>
<br>
<br>
    Pour accéder à votre dressing, vous pouvez cliquer sur le bouton
    représentant un cintre ou par le menu gauche en cliquant sur \"Dressing\".
    Une liste apparaît représentant chaque type de vêtement, sac ou chaussures présents dans votre dressing.
    En cliquant sur un des éléments, une seconde liste apparaît avec la photos des éléments correspondants.
<br>
<br>
<b>Afficher les caractéristiques d'un élément :</b>
    <br>
    <br>
    Appuyez sur la photo d'un élément pour afficher
    toutes les caractéristiques de l'élément.
    <br>
    <br>
<b>Ajouter un élément :</b>
    <br>
    <br>
    Appuyez sur le bouton situé en bas à droite lorsque vous consultez votre dressing.
    Un menu s'ouvre et vous demande quel type d'élément vous voulez ajouter.
    Il vous suffit ensuite de remplir le formulaire d'ajout d'un élément.
    <br>
    <br>
<b>Supprimer un élément :</b>
    <br>
    <br>
    Pour supprimer un élément de votre dressing, appuyez longument sur la photo d'un vêtement,
    la bar de navigation située en haut change et vous pouvez appuyer sur la corbeille.
    Cliquez sur le moins situé en haut de la fenêtre d'affichage.
    Vous pouvez également afficher les éléments d'un type et appuyer
    sur la corbeille d'un élément pour supprimer cet élément particulier.
    <br>
    <br>
<b>Mettre un vêtement au sale :</b>
    <br>
    <br>
    Lorsque vous consultez un vêtement, il est possible de le mettre au sale en appuyant sur la corbeille à linge.
    Vous pouvez également cliquer directement sur le bouton corbeille à linge depuis
    le menu principal. Vous pouvez ainsi consulter vos vêtements sales et sortir
    ou ajouter des vêtements à la corbeille.
    <br>
    <br>
<b>Créer une tenue :</b>
    <br>
    <br>
    Cliquez sur le bouton créer une tenue. Il vous suffit ensuite
    de sélectionner les différents critères avec lesquels vous voulez
    créer votre tenue puis de cliquer sur valider. La tenue créée s'affiche."
     ]]></string>
    <!-- Ajout contenu -->
    <string name="sac">Sac</string>
    <string name="chaussures">Chaussures</string>
    <string name="vetement">Vêtement</string>
    <!-- Ajout sac -->
    <string name="ajoutSac">Ajout d\'un sac</string>
    <string name="typeSac">Type de sac</string>
    <string name="couleurSac">Couleur de sac</string>
    <!-- Ajout d'une paire de chaussures -->
    <string name="ajoutChaussures">Ajout d\'une paire de chaussures</string>
    <string name="typeChaussures">Type</string>
    <string name="couleurChaussures">Couleur</string>
    <!-- Ajout d'un vêtement -->
    <string name="ajoutVetement">Ajout d\'un vêtement</string>
    <string name="type">Type</string>
    <string name="coupe">Coupe</string>
    <string name="matiere">Matière</string>
    <string name="couleur">Couleur</string>
    <string name="load">Ajouter une photo</string>
    <string name="error">Vous devez ajouter une photo</string>
</resources>
