<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/header">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:elevation="10dp"
        android:background="@drawable/shape_connexion">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/btnConnect"
            android:textSize="30sp"
            android:textColor="@color/colorFushia"/>

        <EditText
            android:id="@+id/identifiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintId"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPswd"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/connexionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorFushia"
            android:textColor="@android:color/white"
            android:text="@string/btnConnect" />

        <Button
            android:id="@+id/creationCompteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorFushia"
            android:textColor="@android:color/white"
            android:text="@string/btnCreateAccount" />

    </LinearLayout>


</RelativeLayout>