<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textColor="@color/colorFushia"
                android:layout_marginBottom="20dp"
                android:text="@string/ajoutSac"/>

            <RelativeLayout
                android:id="@+id/type"
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/labelTypeSac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/typeSac"/>

                <Spinner
                    android:id="@+id/typeSac"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:entries="@array/arrayTypeSac"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/couleur"
                android:layout_below="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/labelColorSac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/couleurSac"/>

                <Spinner
                    android:id="@+id/colorSac"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:entries="@array/arrayColor"/>

            </RelativeLayout>

            <ImageView
                android:id="@+id/imgView"
                android:layout_below="@+id/couleur"
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:visibility="gone"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_below="@+id/imgView"
                android:id="@+id/loadPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/white"
                android:textColor="@android:color/black"
                android:text="@string/load"/>

            <Button
                android:layout_below="@+id/loadPicture"
                android:id="@+id/validerAjoutSac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorFushia"
                android:textColor="@android:color/white"
                android:text="@string/validation" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>